fix: alignment of description container

--- a/src/routes/Product/styles.scss
+++ b/src/routes/Product/styles.scss
@@ -5,7 +5,7 @@
   padding: 0 6rem;
   margin-top: 5.3rem;
   display: flex;
-  gap: 5.5rem;
+  gap: 5rem;
   margin-bottom: 13rem;
 
   img {
@@ -17,7 +17,7 @@
   .product-info {
     display: flex;
     flex-direction: column;
-    justify-content: space-between  ;
+    justify-content: space-between;
 
     .product-container-title-price {
       display: flex;
@@ -52,19 +52,24 @@
       }
     }
     
-
-    .product-description__title {
-      display: block;
-      font-size: 1.125rem;
-      font-weight: 500;
-      color: $color-neutral-dark;
+    .product-container-description {
+      margin-top: 2.5rem;
+      .product-description__title {
+        display: block;
+        font-size: 1.125rem;
+        font-weight: 500;
+        color: $color-neutral-dark;
+      }
+  
+      .product-description {
+        @extend .product-description__title;
+        font-weight: 400;
+        margin: 0.5rem 0 2.4rem;
+        text-overflow: ellipsis;
+      }
     }
-
-    .product-description {
-      @extend .product-description__title;
-      font-weight: 400;
-      margin: 0.5rem 0 2.4rem;
-      text-overflow: ellipsis;
+    .product-add-to-cart__button {
+      margin: 0;
     }
   }
 }
